--- a/web_portfolio/sub2/index.html
+++ b/web_portfolio/sub2/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>에스쁘아 작업 내용</title>
-
+    
+    <!-- style -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" type="text/css"
@@ -15,13 +16,15 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
-
+    <!-- // style -->
+    
     <!-- favicon -->
     <link rel="shortcut icon" href="img/k_favicon.ico">
-    <!-- //favicon -->
+    <!-- // favicon -->
 </head>
 
 <body>
+    <!-- header -->
     <header id="header">
         <div class="container">
             <div class="tit">
@@ -40,6 +43,9 @@
             </div>
         </div>
     </header>
+    <!-- // header -->
+
+    <!-- mockup img -->
     <div class="main_img">
         <div class="container">
             <div class="mockup">
@@ -47,6 +53,9 @@
             </div>
         </div>
     </div>
+    <!-- // mockup img -->
+
+    <!-- explain -->
     <div class="explain">
         <div class="container">
             <dl>
@@ -96,9 +105,15 @@
             </dl>
         </div>
     </div>
+    <!-- // explain -->
+
+    <!-- footer -->
     <footer>
         <address>COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
     </footer>
+    <!-- // footer -->
+
+    <!-- scroll top btn -->
     <div class="top_btn">
         <a href="#header">
             <svg xmlns="http://www.w3.org/2000/svg" width="24.785" height="11.11" viewBox="0 0 24.785 11.11">
@@ -108,11 +123,12 @@
             </svg>
         </a>
     </div>
+    <!-- // scroll top btn -->
 
     <!-- script -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/custom.js"></script>
-    <!-- //script -->
+    <!-- // script -->
 </body>
 
 </html>
