--- a/web_portfolio/sub4/index.html
+++ b/web_portfolio/sub4/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <header id="header">
         <div class="container">
             <div class="tit">
@@ -38,6 +39,9 @@
             </div>
         </div>
     </header>
+    <!-- // header -->
+
+    <!-- mockup img -->
     <div class="main_img">
         <div class="container">
             <div class="mockup">
@@ -45,6 +49,9 @@
             </div>
         </div>
     </div>
+    <!-- // mockup img -->
+
+    <!-- explain -->
     <div class="explain">
         <div class="container">
             <dl>
@@ -95,9 +102,15 @@
             </dl>
         </div>
     </div>
+    <!-- // explain -->
+
+    <!-- footer -->
     <footer>
         <address>COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
     </footer>
+    <!-- // footer -->
+
+    <!-- scroll top btn -->
     <div class="top_btn">
         <a href="#header">
             <svg xmlns="http://www.w3.org/2000/svg" width="24.785" height="11.11" viewBox="0 0 24.785 11.11">
@@ -107,11 +120,12 @@
             </svg>
         </a>
     </div>
+    <!-- // scroll top btn -->
 
     <!-- script -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/custom.js"></script>
-    <!-- //script -->
+    <!-- // script -->
 </body>
 
 </html>
