--- a/web_portfolio/sub3/index.html
+++ b/web_portfolio/sub3/index.html
@@ -6,18 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
     <title>앤드백 작업 내용</title>
-
+    
+    <!-- style -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
-    
+    <!-- // style -->
+
     <!-- favicon -->
     <link rel="shortcut icon" href="img/k_favicon.ico">
-    <!-- //favicon -->
+    <!-- // favicon -->
 </head>
 
 <body>
+    <!-- header -->
     <header id="header">
         <div class="container">
             <div class="tit">
@@ -36,6 +39,9 @@
             </div>
         </div>
     </header>
+    <!-- // header -->
+
+    <!-- mockup img -->
     <div class="main_img">
         <div class="container">
             <div class="mockup">
@@ -43,6 +49,9 @@
             </div>
         </div>
     </div>
+    <!-- // mockup img -->
+
+    <!-- explain -->
     <div class="explain">
         <div class="container">
             <dl>
@@ -90,6 +99,9 @@
             </dl>
         </div>
     </div>
+    <!-- // explain -->
+
+    <!-- footer -->
     <footer>
         <address class="copyright">COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
     </footer>
@@ -102,9 +114,11 @@
             </svg>
         </a>
     </div>
+    <!-- // footer -->
+
     <!-- script -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/custom.js"></script>
-    <!-- //script -->
+    <!-- // script -->
 </body>
 </html>
