--- a/web_portfolio/sub3/index.html
+++ b/web_portfolio/sub3/index.html
@@ -74,7 +74,7 @@
 
                 <dt class="intro_tit">프로젝트 소개</dt>
                 <dd class="intro">기존 사이트는 반응형 사이트가 아니었고 상품 슬라이드가 너무 많아 스크롤을 많이 내려야되는 단점이 있었습니다.<br>
-                    그래서 반응형으로 퍼블리싱을 하였으며 신상품과 베스트의 슬라이드를 한 곳에서 같이 볼 수 있도록 탭메뉴를 배치해서 쉽게 볼 수 있도록 했습니다.<br>
+                    그래서 반응형으로 퍼블리싱을 하였으며 신상품과 베스트의 슬라이드를 한 곳에서 같이 볼 수 있도록 탭메뉴를 배치했습니다.<br>
                     또 이미지와 슬라이드가 반복되는 지루함을 탈피하기 위해서 컨텐츠 배너 부분에는 스크롤하면 텍스트와 이미지에 애니메이션을 사용해서 지루함을 없애도록 했습니다.
                 </dd>
 
