--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                     <img src="img/html5_css3.png" alt="html5 css3 icon">
                                 </div>
                             </div>
-                            <span class="skill_text">사이트에 알맞는 시멘틱 코드를 사용하여 구조를 세웁니다.<br>
+                            <span class="skill_text">알맞은 시멘틱 코드를 사용하여 구조를 세웁니다.<br>
                                 웹 표준과 웹 접근성을 준수하여 반응형 사이트를 제작할 수 있습니다.</span>
                         </div>
                         <div class="box box2">
