--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
 
+    <!-- font -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
+
     <!-- swiper slider -->
     <link rel="stylesheet" href="css/swiper.css">
 
@@ -133,7 +136,7 @@
                                     <img src="img/html5_css3.png" alt="html5 css3 icon">
                                 </div>
                             </div>
-                            <span class="skill_text">알맞은 시멘틱 코드를 사용하여 구조를 세웁니다.<br>
+                            <span class="skill_text">알맞은 시멘틱 코드를 사용하여 구조를 세우고<br>
                                 웹 표준과 웹 접근성을 준수하여 반응형 사이트를 제작할 수 있습니다.</span>
                         </div>
                         <div class="box box2">
@@ -142,7 +145,7 @@
                                     <img src="img/js_jq.png" alt="javascript jquery icon">
                                 </div>
                             </div>
-                            <span class="skill_text">자바스크립트 ES6 문법을 이해하고 활용할 수 있습니다.<br>
+                            <span class="skill_text">자바스크립트 ES6 문법을 이해하고 활용하며<br>
                                 제이쿼리를 활용하여 다양한 애니메이션과 기능을 구현할 수 있습니다.</span>
                         </div>
                         <div class="box box3">
@@ -151,7 +154,7 @@
                                     <img class="img1" src="img/ps_ai_xd.png" alt="photoshop icon">
                                 </div>
                             </div>
-                            <span class="skill_text">사진 보정 및 배너, 포스터, 아이콘 등 디자인 작업을 경험했습니다.<br>
+                            <span class="skill_text">사진 보정 및 배너, 포스터, 아이콘 등 디자인 작업을 경험한 것은 물론<br>
                                 XD를 이용한 웹사이트 시안과 프로토타입 작업도 가능합니다.</span>
                         </div>
                     </div>
