--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                 </div>
                             </div>
                             <span class="skill_text">자바스크립트 ES6 문법을 이해하고 활용하며<br>
-                                제이쿼리를 활용하여 다양한 애니메이션과 기능을 구현할 수 있습니다.</span>
+                                제이쿼리로 다양한 애니메이션과 기능을 구현할 수 있습니다.</span>
                         </div>
                         <div class="box box3">
                             <div class="circle">
